[package]
name = "skylight"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
bitflags = "1.2.1"
winapi = "0.3.9"

[features]
default = []
handleapi = [
    "winapi/handleapi",
]
processthreadsapi = [
    "handleapi",
    "winapi/processthreadsapi",
    "winapi/synchapi",
    "winapi/winbase",
]
tlhelp32 = [
    "handleapi",
    "winapi/tlhelp32",
]
