[package]
name = "skylight"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
bitflags = "1.2.1"
winapi = "0.3.9"

[features]
default = []
handleapi = [
    "winapi/handleapi",
]
objbase = [
    "winapi/objbase",
    "winapi/winerror",
]
oleauto = [
    "winapi/oleauto",
]
processthreadsapi = [
    "handleapi",
    "winbase",
    "winapi/processthreadsapi",
    "winapi/synchapi",
]
shlobj = [
    "objbase",
    "winapi/knownfolders",
    "winapi/shlobj",
    "winapi/winbase",
]
tlhelp32 = [
    "handleapi",
    "winapi/tlhelp32",
]
winbase = [
    "winapi/winbase",
    
    # TODO: This is currently used by the `get_user_name` function.
    # Consider adding to a new lmcons file or hardcode the necessary constant.
    "winapi/lmcons"
]
wincrypt = [
    "winbase",
    "winapi/dpapi",
    "winapi/wincrypt",
]
